--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-tabs/cephfs-tabs.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-tabs/cephfs-tabs.component.html
@@ -44,6 +44,17 @@
         </cd-cephfs-subvolume-snapshots-list>
       </ng-template>
     </ng-container>
+    <ng-container ngbNavItem="snapshot-schedules">
+      <a
+      ngbNavLink
+      i18n>Snapshot schedules</a>
+      <ng-template ngbNavContent>
+        <cd-cephfs-snapshotschedule-list
+          [fsName]="selection.mdsmap.fs_name"
+          [id]="id"
+        ></cd-cephfs-snapshotschedule-list>
+      </ng-template>
+    </ng-container>
     <ng-container ngbNavItem="clients">
       <a ngbNavLink>
         <ng-container i18n>Clients</ng-container>
