mgr/dashboard: SI and call home form cleanups
Resolves: rhbz#2264344

Signed-off-by: Nizamudeen A <nia@redhat.com>
(cherry picked from commit 405b9fd8f147810bd0f301da22f08fe56ea76a53)

--- a/src/pybind/mgr/dashboard/frontend/src/app/shared/components/storage-insights-modal/storage-insights-modal.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/shared/components/storage-insights-modal/storage-insights-modal.component.html
@@ -103,7 +103,7 @@
 
         <div class="form-group row">
           <label class="cd-col-form-label required"
-                 for="email">
+                 for="tenants">
             <span i18n>Tenants</span>
           </label>
           <div class="cd-col-form-input">
